Fix namespacing, Improve test page example
Increase option.length on test select

--- a/material-number-select.css
+++ b/material-number-select.css
@@ -1,10 +1,11 @@
 /* Material Number Select -- v0.3.1 -- https://github.com/jsejcksn/material-number-select/ */
 
-body {
+.mdl-expand {
+  background-color: #efefef;
   height: 100%;
 }
 
-.no-scroll {
+.mdl-no-scroll {
   height: 0;
   overflow: hidden;
   width: 0;
